reorder display of contributors and add roles

--- a/styles/index.less
+++ b/styles/index.less
@@ -468,6 +468,19 @@ ul.contributors {
 	margin-bottom: 0.5rem;
 }
 
+li.Volume_editor {
+    margin-bottom: 0.5rem;
+}
+
+li.Author {
+    margin-bottom: 0.5rem;
+}
+
+span.role {
+	color:grey;
+	font-size: 0.9em;
+}
+
 .contributors .orcid {
 	display: block;
 	font-size: .75rem;
