--- a/styles/index.less
+++ b/styles/index.less
@@ -2,7 +2,6 @@
 Variables
 ------------------*/
 @idai-gradient: linear-gradient(to right, rgba(106,164,184,0.95) 0%, rgba(71,123,199,0.66) 95%);
-@idaiworldbanner-path: url("https://publications.dainst.org/books/plugins/themes/publications-theme/images/idaiworld-banner.png");
 
 /* -------------
 dai-header
@@ -145,7 +144,7 @@ li.profile {
 
 html {
 	background-size: contain;
-	background: url(@idaiworldbanner-path) repeat;
+	background: url("https://publications.dainst.org/books/plugins/themes/publications-theme/images/idaiworld-banner.png") repeat;
 	overflow-y: scroll;
 }
 
