fix display of publications-logo with firefox

--- a/styles/index.less
+++ b/styles/index.less
@@ -28,7 +28,7 @@ iframe {
 	border: 1px solid #dfdada;
 	display: none;
 	position: absolute;
-	top: 6vh;
+	top: 4.5vh;
 }
 
 #idai-world-dropdown {
@@ -39,6 +39,7 @@ iframe {
 #idai-world-dropdown a {
 	font-size: 2em;
 	padding: 1vh;
+	vertical-align: top;
 }
 
 #idai-world-dropdown a:active {
@@ -51,9 +52,7 @@ iframe {
 
 #idai-publications-logo {
 	height: 32.5px;
-	position: absolute;
 	padding-left: 1vw;
-	max-width: unset;
 }
 
 a#dai-logo {
