style volume-title on chapter landing page

--- a/styles/index.less
+++ b/styles/index.less
@@ -487,6 +487,11 @@ span.role {
 	border-top: 0.1vh solid gray;
 }
 
+.volume-title {
+	font-style: italic;
+}
+
+
 .series {
 	padding-bottom: 0.5vh;
 	padding-top: 0.5vh;
