reduce space between galley buttons

--- a/styles/index.less
+++ b/styles/index.less
@@ -306,6 +306,11 @@ body {
 	margin: 0.1vw;
 }
 
+.obj_issue_toc .galleys_links li {
+	margin-inline-end: 0.25rem;
+}
+
+
 .block_make_submission a, .cmp_download_link {
 	padding: 0.75rem 1rem;
 }
