change iframe specs (formerly not displayed). iframe is used by HTML-Plugin

--- a/styles/index.less
+++ b/styles/index.less
@@ -30,12 +30,11 @@ dai-header
 	text-align: right;
 }
 
-iframe {
+#idai-world-dropdown > iframe {
 	background-color: white;
 	height: 100vh;
 	width: 200px;
 	border: 1px solid #dfdada;
-	display: none;
 	position: absolute;
 	top: 4.5vh;
 }
@@ -352,6 +351,17 @@ button .submit {
 
 p.doi-value {
 	margin-top:2vh;
+}
+
+/* HTML view */
+.header_view {
+	display:none;
+}
+
+.galley_view iframe {
+	display: block !important;
+	padding-top:0 !important;
+	zoom:0.7 !important;
 }
 
 /*------------------
