add styles for guideline-pages

--- a/styles/index.less
+++ b/styles/index.less
@@ -356,7 +356,10 @@ p.doi-value {
 	margin-top:2vh;
 }
 
-/* HTML view */
+/*------------------
+/* HTML view *
+-------------------*/
+
 .header_view {
 	display:none;
 }
@@ -366,6 +369,42 @@ p.doi-value {
 	padding-top:0 !important;
 	zoom:0.7 !important;
 }
+
+/*-----------------------------
+/* generic author-guidelines *
+-------------------------------*/
+
+#guideline-qANDa > p {
+	margin:1.5% 0;
+}
+
+#guideline-qANDa > details {
+	margin: 3% 1%;
+}
+
+#guideline-qANDa > details > summary {
+	font-size: 1.1em;
+    color: #006798;;
+}
+
+#guideline-qANDa > details > summary::marker {
+	cursor: pointer;
+}
+
+#guideline-qANDa > details > p {
+	padding: 1% 1.5%;
+	margin: 0;
+	text-align:left;
+}
+
+#guideline-qANDa > details > ul {
+	margin: 0;
+}
+
+#guideline-qANDa > details > p > a {
+	word-break: break-all;
+}
+
 
 /*------------------
 = > OMP specific
