style changes for guidelines

--- a/styles/index.less
+++ b/styles/index.less
@@ -194,10 +194,16 @@ body {
 
 .pkp_site_nav_menu {
 	padding: 0 1vw;
+	border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
 
 .pkp_site_nav_menu ul ul {
-	padding-top: 1.5vh;
+	padding-top: 0.5vh;
+}
+
+.pkp_nav_list ul a {
+	color: #649bb6;
 }
 
 .pkp_structure_main {
@@ -394,15 +400,14 @@ p.doi-value {
 #guideline-qANDa > details > p {
 	padding: 1% 1.5%;
 	margin: 0;
-	text-align:left;
 }
 
 #guideline-qANDa > details > ul {
 	margin: 0;
 }
 
-#guideline-qANDa > details > p > a {
-	word-break: break-all;
+.guideline-quecklist > input {
+	margin: 1%;
 }
 
 
