update styles for guidelines

--- a/styles/index.less
+++ b/styles/index.less
@@ -199,6 +199,7 @@ body {
 }
 
 .pkp_site_nav_menu ul ul {
+	background: #393e47;
 	padding-top: 0.5vh;
 }
 
@@ -395,6 +396,7 @@ p.doi-value {
 
 #guideline-qANDa > details > summary::marker {
 	cursor: pointer;
+	font-size: 1.3rem;
 }
 
 #guideline-qANDa > details > p {
@@ -406,10 +408,9 @@ p.doi-value {
 	margin: 0;
 }
 
-.guideline-quecklist > input {
+input[type="checkbox"] {
 	margin: 1%;
 }
-
 
 /*------------------
 = > OMP specific
